5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1752_1528.log
== TEST (2019-05-16 16:36:37) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
acumuladora = pft + pfr
contadora   = 0
while (pft <= 0):
	acumuladora = acumuladora - 5*pf
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:02) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
acumuladora = pft + pfr
contadora   = 0
while (pft <= 0):
	acumuladora = acumuladora - 5*pf
	print(acumuladora)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:24) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
acumuladora = 0
contadora   = 0
while (pft <= 0):
	acumuladora = acumuladora - 5*pf
print(acumuladora)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:47) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
acumuladora = 0
contadora   = 0
while (pft <= 0):
	acumuladora = acumuladora - 5*pf
print(acumuladora)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:58) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
acumuladora = 0
contadora   = 0
while (pft <= 0):
	acumuladora = acumuladora - 5*pf
print(acumuladora)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:40) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
contadora   = 0
while (pft <= 0):
	dano        = 2*pf
	acumuladora = pft + pfr
	ptf=acumuladora - dano
	print(ptf)
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:16) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
contadora   = 0
while (pft <= 0):
	dano        = 5*pf
	acumuladora = pft + pfr
	ptf=acumuladora - dano
print(ptf)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(ptf)
NameError: name 'ptf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:36) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
contadora   = 0
dano        = 5*pf
acumuladora = pft + pfr
ptf=acumuladora - dano
print(ptf)
	
-- OUTPUT:
-120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:47:53) 
-- CODE:
pf =int(input("Quantidade de pontos de forca tiradas do Troll: "))
pft=int(input("Quantidade inicial de pontos de forca do Troll: "))
pfr=int(input("Quantidade de pontos de forca recuperados: "))
contadora   = 0
dano        = 5*pf
acumuladora = pft + pfr
ptf=acumuladora - dano
print(ptf)
	
-- EXECUTION TIME:
0.131423
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
1
---- user output:
-120
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
12
---- user output:
91
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
